# SolarSim

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  horizons_earth.txt  manifest.yaml
.github/: FUNDING.yml
.github/workflows/: daily.yml  gh-pages._yml  gh-pages.yml  release.yml  wasm._yml  wasm.yml
assets/: bodies.sim
assets/models/: ariel.glb  charon.glb  deimos.glb  ganymede.glb  mercury.glb  miranda.glb  moon.glb  oberon.glb  phobos.glb  titan.glb  titania.glb  umbriel.glb  uranus.glb  venus.glb  voyager.glb
assets/scenarios/: earth_satellites.sim  solar_system.sim  solar_system_copy.sim
assets/shaders/: star.wgsl
scenarios/: Test.sim  earth_satellites.sim  solar_system.sim  solar_system_copy.sim  voyager_1.sim  voyager_2.sim
src/: apsis.rs  arrows.rs  billboard.rs  bodies.rs  body.rs  camera.rs  constants.rs  constellation.rs  debug.rs  diameter.rs  direction.rs  egui_input_block.rs  fps.rs  input.rs  lib.rs  loading.rs  lock_on.rs  main.rs  menu.rs  orbit_lines.rs  physics.rs  reset.rs  rotation.rs  selection.rs  serialization.rs  setup.rs  skybox.rs  speed.rs  star_renderer.rs  ui.rs  unit.rs  utils.rs
src/pan_orbit/: egui.rs  lib.rs  mod.rs  util.rs
src/simulation/: loading.rs  mod.rs
src/simulation/asset/: default_values.rs  mod.rs  serialization.rs
src/simulation/components/: anise.rs  apsis.rs  billboard.rs  body.rs  camera.rs  diameter.rs  direction.rs  editor.rs  horizons.rs  lock_on.rs  min_zoom.rs  mod.rs  motion_line.rs  orbit_lines.rs  physics.rs  reset.rs  rotation.rs  save_scenario.rs  scale.rs  selection.rs  shape.rs  spacecraft.rs  speed.rs
src/simulation/input/: egui_input_block.rs  input.rs  mod.rs
src/simulation/integration/: euler.rs  mod.rs  verlet.rs
src/simulation/render/: mod.rs  skybox.rs  star_billboard.rs
src/simulation/scenario/: loading.rs  mod.rs  save_scenario.rs  setup.rs
src/simulation/scenario/setup/: camera.rs  mod.rs  scenario.rs
src/simulation/ui/: body_panel.rs  bottom_bar.rs  components.rs  debug_window.rs  editor_body_panel.rs  editor_bottom_bar.rs  menu.rs  metadata.rs  mod.rs  scenario_selection.rs  sim_body_panel.rs  sim_bottom_bar.rs  simulation_bottom_bar.rs  system_panel.rs  toast.rs
src/simulation/units/: converter.rs  mod.rs
wasm/: index.html  style.css
