[package]
name = "SolarSim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'
lto = "thin"

#[build-dependencies]
#embed-resource = "1.6.3"

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "release-0.11.3", features = ["dynamic_linking"] } 
bevy = { version = "0.14.2" }
bevy_easings = "0.14"
#bevy_panorbit_camera = { git = "https://github.com/jan-tennert/bevy_panorbit_camera", rev = "7e3c3f8" }
bevy-inspector-egui = { version = "0.26.0", default-features = false }
#bevy_mod_picking = "0.15"
bevy_egui = "0.29.0"
chrono = "0.4.23"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
winit = "0.28.7"
image = "0.24.7"
bevy_mod_billboard = "0.7.0"
blocking = "1.5.1"
anise = "0.4.3"
