[package]
name = "SolarSim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'
lto = "thin"

#[build-dependencies]
#embed-resource = "1.6.3"

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "release-0.11.3", features = ["dynamic_linking"] } 
bevy = { version = "0.15.1", features = ["jpeg"] }
bevy_easings = "0.15"
#bevy_panorbit_camera = { git = "https://github.com/jan-tennert/bevy_panorbit_camera", rev = "7e3c3f8" }
bevy-inspector-egui = { version = "0.28.1"}
#bevy_mod_picking = "0.15"
bevy_egui = { version = "0.31.1", features = ["immutable_ctx"] }
chrono = "0.4.23"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
winit = "0.28.7"
image = "0.24.7"
bevy_mod_billboard = { git = "https://github.com/voximity/bevy_mod_billboard", branch = "migrate-0.15" }
blocking = "1.5.1"
egui-toast = "0.15.0"
tinyfiledialogs = "3.0"
egui_extras = { version = "0.29.1", features = ["chrono"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
anise = "0.5.2"
bevy_async_task = "0.4.0"
bevy_panorbit_camera = { version = "0.21.2", features = ["bevy_egui"] }

